--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
-<!doctype html>
-<html>
-  <head>
-    <title>Firebird: The Game</title>
-  </head>
-  <body>
-    test
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Firebird: The Game</title>
+
+  <script src="src/index.js"></script>
+  <link rel="stylesheet" href="styles.css">
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body onload="initializeGame();">
+  <canvas id="game" width="320" height="320"></canvas>
+</body>
 </html>
